# sync_folders

./: .gitignore  .pre-commit-config.yaml  conftest.py  file_operations.py  main.py  pyproject.toml  readme.MD  requirements.txt  test_main.py  utils.py
.github/workflows/: push-pull.yaml
src/: conftest.py  main.py  test_main.py
tests/: test_main.py
