[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-clustering"
version = "0.0.1"
description = "A brief description of your package"
readme = "README.md"

license = { file = "LICENSE" }

dependencies = [
    "pytest>=8.2.1",
    "schedule>=1.2.2",
    "pre-commit",
]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
repository = "https://github.com/michalmoninec/data_clustering"
